@@ -1,4 +1,4 @@
 
-man_MANS = fuser.1 killall.1 peekfd.1 pstree.1
+man_MANS = fuser.1 killall.1 peekfd.1 prtstat.1 pstree.1
 
 EXTRA_DIST = $(man_MANS)
