@@ -3,6 +3,8 @@ Changes in 22.9
 	* short option l returned in fuser Debian #539087
 	* long options terminated with 0s Debian #551833
 	* fuser only kills normal processes, patch thanks to Erik Li SF# 2892724
+	* New fuser -M if you REALLY want mount points, patch thanks to
+	  Jeremie LE HEN SF#2899709
 
 Changes in 22.8
 ===============
